<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Obsidian Client</string>
    <string name="title_files">Files</string>
    <string name="title_viewer">Viewer</string>
    <string name="title_settings">Settings</string>
    <string name="label_url">WebDAV URL</string>
    <string name="label_user">Username</string>
    <string name="label_pass">Password</string>
    <string name="label_remote_path">Remote Path</string>
    <string name="btn_save">Save</string>
    <string name="btn_sync_down">Pull</string>
    <string name="btn_sync_up">Push</string>
    <string name="msg_syncing">Syncing...</string>
    <string name="msg_saved">Saved!</string>
    <string name="msg_error">Error: %s</string>
    <string name="msg_no_creds">Please configure WebDAV</string>

    <!-- New Strings -->
    <string name="action_new_note">New Note</string>
    <string name="action_new_folder">New Folder</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_title_new_note">New Note</string>
    <string name="dialog_title_new_folder">New Folder</string>
    <string name="dialog_title_rename">Rename</string>
    <string name="dialog_title_delete">Delete</string>
    <string name="dialog_message_delete">Are you sure you want to delete "%s"?</string>
    <string name="dialog_hint_name">Name</string>
    <string name="dialog_btn_create">Create</string>
    <string name="dialog_btn_rename">Rename</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="msg_success">Success</string>
    <string name="msg_failed">Failed</string>
    <string name="msg_exists">File already exists</string>
</resources>
